# galib

./: CMakeLists.txt  LICENSE
src/: genes.cpp  genes.h  genetic_algorithm.cpp  genetic_algorithm.h
